const TestIds={
  IFEmail:'IFEmail',
  IFPassword:'IFPassword',
  BtnDone:'BtnDone',
  BtnRememberMe:'ButtonRemember',
  BtnSignInGoogle:'ButtonSignInGoogle',
  ModalScreen:'ModalScreen',
  Home:'Home',

}
export default TestIds
