...
  const onChangeInputEmail = text => setEmail(text);
  const onChangeInputPassword = text => setPassword(text);
  const onClickRememberMe = () => setOnRememberMe(!onRememberMe);
  const goToSignIn = () => navigation.navigate(routes.REGISTER);
  const showErrorAlert = error => {
    //Error Handling Alert
    Alert.alert('Sorry', error, [
      {
        text: 'Okay',
      },
    ]);
  };
  const populateUser = async({ uid, userInformation }) => {
    dispatch(populateUserData({ uid, userInformation }));
    goToModal();
...
